<resources>
    <string name="app_name">Smack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="generate_background_color">Generate background color</string>
    <string name="create_user">Create user</string>
    <string name="password">password</string>
    <string name="user_name">user name</string>
    <string name="email">email</string>
    <string name="avatar">Avatar</string>
    <string name="tap_to_generate_user_avatar">Tap to generate user avatar</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="add_channel">Add Channel</string>
    <string name="channel_name">channel name</string>
    <string name="channel_description">channel description</string>
    <string name="message">message:</string>
    <string name="send_message">Send message</string>
    <string name="please_log_in">Please Log In</string>
    <string name="avatar_image">Avatar image</string>
    <string name="itoplak">itoplak</string>
    <string name="create_new_channel">Create new channel</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="something_went_wrong_please_try_again">Something went wrong, please try again.</string>
    <string name="make_sure_user_name_email_and_password_are_filled_in">Make sure user name, email, and password are filled in.</string>
    <string name="make_sure_email_and_password_are_filled_in">"Make sure email and password are filled in."</string>
    <string name="email_address_is_required">"Email address is required."</string>
    <string name="enter_valid_email_address">"Enter valid email address."</string>
    <string name="password_is_required">"Password is required."</string>
    <string name="enter_valid_password">"Enter valid password (at least 8 characters: digits, uppercase and lowercase letters, and special character, no white space)."</string>
    <string name="username_is_required">"Username is required."</string>
    <string name="username_is_too_long">"Username is too long (max. 20 characters)."</string>
    <string name="channel_name_is_required">"Channel name is required."</string>
    <string name="channel_name_is_too_long">"Channel name is too long (max. 30 characters)."</string>
</resources>
